bugfix(Nav) ILOUAT-27 should not be able to scroll on nav
Make main nav on mobile fixed and cover the screen

--- a/packages/styles/scss/components/_navigation.scss
+++ b/packages/styles/scss/components/_navigation.scss
@@ -9,7 +9,12 @@
   z-index: 4;
 
   &.ilo--mobile--open {
-    height: 100vh;
+    height: 100%;
+    left: 0;
+    min-height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
 
   @include breakpoint("large") {
@@ -213,9 +218,12 @@
 
   &--navigation {
     background: $brand-ilo-white;
+    height: 100%;
+    left: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
     position: absolute;
     top: 0;
-    left: 0;
     transform: translateX(100%);
     transition: transform 225ms ease-out;
     width: 100%;
@@ -891,4 +899,10 @@
       }
     }
   }
+}
+
+.ilo--menu--open {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
 }
